рабочее api переделанное под gorm с работой с таблицей mani2mani
