# docs/swagger.json
@@ -8,9 +8,9 @@
     },
     "host": "localhost:5050",
     "paths": {
-        "/genre/add/": {
-            "post": {
-                "description": "Сreating a movie record",
+        "/all-genres": {
+            "get": {
+                "description": "Получение списка жанров",
                 "consumes": [
                     "application/json"
                 ],
@@ -18,7 +18,33 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Create"
+                    "Genres"
+                ],
+                "summary": "Get genre",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/views.GenreView"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/genre/add/": {
+            "post": {
+                "description": "Добавление жанра в базу",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Genres"
                 ],
                 "summary": "CreateGenre",
                 "parameters": [
@@ -28,16 +54,16 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Genre"
+                            "$ref": "#/definitions/saveDTO.GenreDTO"
                         }
                     }
                 ],
                 "responses": {}
             }
         },
-        "/genre/delete/{id}": {
-            "post": {
-                "description": "Deleting data from a table",
+        "/genre/{id}": {
+            "get": {
+                "description": "Получение жанра",
                 "consumes": [
                     "application/json"
                 ],
@@ -45,9 +71,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Delete"
+                    "Genres"
                 ],
-                "summary": "DeleteGenres",
+                "summary": "Get genre",
                 "parameters": [
                     {
                         "type": "integer",
@@ -57,12 +83,17 @@
                         "required": true
                     }
                 ],
-                "responses": {}
-            }
-        },
-        "/genre/update/{id}": {
-            "post": {
-                "description": "Updating values in the table genre",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/views.GenreView"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Обновление данных жанра",
                 "consumes": [
                     "application/json"
                 ],
@@ -70,7 +101,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Update"
+                    "Genres"
                 ],
                 "summary": "UpdateGenres",
                 "parameters": [
@@ -92,11 +123,9 @@
                     }
                 ],
                 "responses": {}
-            }
-        },
-        "/get": {
-            "get": {
-                "description": "Привествие",
+            },
+            "delete": {
+                "description": "Удаление жанра из базы",
                 "consumes": [
                     "application/json"
                 ],
@@ -104,100 +133,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Hello"
+                    "Genres"
                 ],
-                "summary": "Hello",
-                "responses": {}
-            }
-        },
-        "/get/Movie/{limit}": {
-            "get": {
-                "description": "Getting a list of movies",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Get"
-                ],
-                "summary": "GetListMovies",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Number of films",
-                        "name": "limit",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {}
-            }
-        },
-        "/get/genre/{id}": {
-            "get": {
-                "description": "Getting genre",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Get"
-                ],
-                "summary": "Get genre",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "id genre",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {}
-            }
-        },
-        "/get/movie/{id}": {
-            "get": {
-                "description": "Getting the name of the movie and its description",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Get"
-                ],
-                "summary": "Get movie",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "id movie",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {}
-            }
-        },
-        "/get/movieByGenres/{id}": {
-            "get": {
-                "description": "Getting movies with the selected genre",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Get"
-                ],
-                "summary": "GetMovieByGenre",
+                "summary": "DeleteGenres",
                 "parameters": [
                     {
                         "type": "integer",
@@ -212,7 +150,7 @@
         },
         "/movie/add/": {
             "post": {
-                "description": "Сreating a movie record",
+                "description": "Добавление фильма в базу",
                 "consumes": [
                     "application/json"
                 ],
@@ -220,7 +158,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Create"
+                    "Movies"
                 ],
                 "summary": "CreateMovie",
                 "parameters": [
@@ -230,16 +168,16 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Movie"
+                            "$ref": "#/definitions/saveDTO.MovieDTO"
                         }
                     }
                 ],
                 "responses": {}
             }
         },
-        "/movie/delete/{id}": {
-            "post": {
-                "description": "Deleting data from a table",
+        "/movie/{id}": {
+            "get": {
+                "description": "Получение фильма",
                 "consumes": [
                     "application/json"
                 ],
@@ -247,9 +185,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Delete"
+                    "Movies"
                 ],
-                "summary": "DeleteMovie",
+                "summary": "Get movie",
                 "parameters": [
                     {
                         "type": "integer",
@@ -259,12 +197,17 @@
                         "required": true
                     }
                 ],
-                "responses": {}
-            }
-        },
-        "/movie/update/{id}": {
-            "post": {
-                "description": "Updating values in the table movie",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/views.MovieView"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Обновление данных фильма",
                 "consumes": [
                     "application/json"
                 ],
@@ -272,7 +215,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Update"
+                    "Movies"
                 ],
                 "summary": "UpdateMovie",
                 "parameters": [
@@ -294,11 +237,9 @@
                     }
                 ],
                 "responses": {}
-            }
-        },
-        "/movieGenres/add/": {
-            "post": {
-                "description": "Сreating a movie record",
+            },
+            "delete": {
+                "description": "Удаление фильма из базы",
                 "consumes": [
                     "application/json"
                 ],
@@ -306,77 +247,16 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Create"
+                    "Movies"
                 ],
-                "summary": "CreateMovieGenres",
-                "parameters": [
-                    {
-                        "description": "Linking genres to a film",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.Movie_genre"
-                        }
-                    }
-                ],
-                "responses": {}
-            }
-        },
-        "/movieGenres/delete/{id}": {
-            "post": {
-                "description": "Deleting data from a table",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Delete"
-                ],
-                "summary": "DeleteMovieGenres",
+                "summary": "DeleteMovie",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "id movieGenres",
+                        "description": "id movie",
                         "name": "id",
                         "in": "path",
                         "required": true
-                    }
-                ],
-                "responses": {}
-            }
-        },
-        "/movieGenres/update/{id}": {
-            "post": {
-                "description": "Updating values in the table movieGenres",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Update"
-                ],
-                "summary": "UpdateMovieGenres",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "id movie_genre",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "New values",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.Movie_genre"
-                        }
                     }
                 ],
                 "responses": {}
@@ -390,6 +270,12 @@
                 "id": {
                     "type": "integer"
                 },
+                "movies": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Movie"
+                    }
+                },
                 "name_genre": {
                     "type": "string"
                 }
@@ -401,6 +287,12 @@
                 "description": {
                     "type": "string"
                 },
+                "genres": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Genre"
+                    }
+                },
                 "id": {
                     "type": "integer"
                 },
@@ -409,16 +301,58 @@
                 }
             }
         },
-        "model.Movie_genre": {
+        "saveDTO.GenreDTO": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "saveDTO.MovieDTO": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "id_genres": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "views.GenreView": {
             "type": "object",
             "properties": {
                 "id": {
                     "type": "integer"
                 },
-                "id_genre": {
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "views.MovieView": {
+            "type": "object",
+            "properties": {
+                "description": {
                     "type": "string"
                 },
-                "id_movie": {
+                "genres": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/views.GenreView"
+                    }
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
                     "type": "string"
                 }
             }
