# model/model.go
@@ -1,16 +1,13 @@
 package model
 
 type Movie struct {
-	Id          uint   `json:"id"`
-	Name_movie  string `json:"name_movie"`
-	Description string `json:"description"`
+	Id          uint     `json:"id" gorm:"primaryKey"`
+	Name        string   `json:"name_movie"`
+	Description string   `json:"description"`
+	Genres      []*Genre `gorm:"many2many:movie_genres"`
 }
 type Genre struct {
-	Id         uint   `json:"id"`
-	Name_genre string `json:"name_genre"`
-}
-type Movie_genre struct {
-	Id       uint   `json:"id"`
-	Id_movie string `json:"id_movie"`
-	Id_genre string `json:"id_genre"`
+	Id     uint     `json:"id" gorm:"primaryKey"`
+	Name   string   `json:"name_genre"`
+	Movies []*Movie `gorm:"many2many:movie_genres"`
 }
