# model/saveDTO/genreSaveDTO.go
@@ -1,0 +1,5 @@
+package saveDTO
+
+type GenreDTO struct {
+	Name string `json:"name"`
+}
