# model/saveDTO/movieSaveDTO.go
@@ -1,0 +1,7 @@
+package saveDTO
+
+type MovieDTO struct {
+	Name        string `json:"name"`
+	Description string `json:"description"`
+	Genres      []uint `json:"id_genres"`
+}
