# model/views/genre.go
@@ -1,0 +1,6 @@
+package views
+
+type GenreView struct {
+	Id   uint   `json:"id"`
+	Name string `json:"name"`
+}
