# model/views/movie.go
@@ -1,0 +1,8 @@
+package views
+
+type MovieView struct {
+	Id          uint        `json:"id"`
+	Name        string      `json:"name"`
+	Description string      `json:"description"`
+	Genres      []GenreView `json:"genres"`
+}
